--- a/projetoIndividual/assets/css/style.css
+++ b/projetoIndividual/assets/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap');               
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
+/* ----------------- Padronização das tag ------------------------------ */
 /* Zerando todas as bordas da page  */
 *{
     padding: 0;
@@ -9,7 +10,7 @@
 body{
     /* Determinando o tamanho minimo e maximo de ajuste para os conteudos
     dentro do body */
-    max-width: 2000px;
+    max-width: 1500px;
     min-width: 300px;
     min-height: 100%;
     background: #e5e5e5;
@@ -19,8 +20,11 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-width: 500px;
     min-height: 100%;
     padding-bottom: 100px;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 .margim{
     border-top: 2px solid #fca311;
@@ -38,6 +42,7 @@ p{
     color: #000000;
     font-size: 15px;
 } 
+/* Padronizando rodape para todas as paginas */
 footer{
     background: #000000;
     color: #e5e5e5;
@@ -46,10 +51,12 @@ footer{
     align-items: center;
     width: 100%;
     height: 30px;
-    /* position: absolute; */
-    bottom: 0;
-    left: 0;
-    }
+}
+/* Formartação para todas as tag a */
+a{
+    text-decoration: none; /* retirando  o sublinhado do link */
+    color:inherit; /* retitrando a formatação de cor dos links */
+}
 /* ------------------------ Menu ----------------- */
 /* Div para ajustar todo o menu no topo  */
 #all{
@@ -69,11 +76,6 @@ footer{
     color: #000000;
 }
 
-/* Formatação da tag a  */
-a{
-    text-decoration: none; /* retirando  o sublinhado do link */
-    color:inherit; /* retitrando a formatação de cor dos links */
-}
 .abasMenu{
     margin-left: 10px; /*Margin para espaçar o menu*/
 }
@@ -89,16 +91,13 @@ a{
     
 }
 /* Adicionando efeitos visuais para quando passar o cursor  */
-a:hover{
-    font-size: 18px; /* Aumentando a fonte */
-    transition-delay: 0,40s; /* Suavizando a forma como o efeito acontece */
+.menuTop:hover{
+    transform: scale(1.2);/*Aumentando a fonte*/
 }
 /* ------------------------- Page Home ------------------------- */
 #imgHome{
     max-width: 300px; /* Utilizando do "Max" para que a imagem reduza o tamanho sem perder a propoção */
     max-height: 250px;
-    width: auto;
-    height: auto;
     border-radius: 50%;
     margin-top: -80px;
 }
@@ -114,13 +113,79 @@ a:hover{
 
 
 /* --------------------------- Page Sobre mim -------------- */
-
+.box{
+    display: flex;
+    justify-content: center;
+    min-height: 300px;
+    max-height: 500px;
+}
+.conteudo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    width: 350px;
+    height: 400px;
+    border: #fca311 solid 1px;
+}
+.box img{
+    max-width: 320px;
+    max-height: 210px;
+}
+/* config para fazer o texto sumir */
+.conteudo p{
+    display: none; /*Esconder o texto*/
+    margin-top: 2em;
+}
+.conteudo:hover{
+    /* Criando efeito de transição na div
+    para quando passaar o mouse */
+    transform: scale(1.1); /*Propoção da transição */
+    transition: all 200ms ease-in; /*Tempo da transição */
+    background-color: #fca311;
+    border: #000000 solid 1px;
+}
+.conteudo:hover p{
+    /* Fazendo o texto aparecer quando passar o mouse */
+    display: block; 
+}
 
 
 
 
 
 /* ---------------------------- Page Contatos ------------------ */
+/* Configurando as box do formulario */
+fieldset{
+    display: flex;
+    border: 0;
+}
+/* Configurando cada formulario individualmente */
+.formulario{
+    font-family: 'Roboto Condensed', sans-serif;
+    margin-left: 2em;
+    /* display: block; */
+}
+#email{
+    margin-top: 2em;
+}
+.boxLeft{
+    margin-right: 17em;
+}
+#feedback{
+    margin-top: 5em;
+    width: 20em;
+    height: 10em;
+}
+/* Editando as bordas de cada box do formulario */
+input, textarea, #botao{
+    border: #000000 solid 2px;
+    border-radius: 5px;
+}
+input:hover, textarea:hover, #botao:hover{
+    border: #fca311 solid 2px;
+}
+
 #allContatos{
     margin: 20px;
 }
@@ -133,8 +198,7 @@ a:hover{
 }
 .meusContatos a:hover{
     text-shadow: 1px 0px #000000; /* Adicionando sombra ao texto */
-    /* transition-delay: 0.5s; */
-    /* font-size: 20px; */
+
 }
 
 #nomeContatos{
