--- a/projetoIndividual/assets/css/style.css
+++ b/projetoIndividual/assets/css/style.css
@@ -10,9 +10,9 @@
 body{
     /* Determinando o tamanho minimo e maximo de ajuste para os conteudos
     dentro do body */
-    max-width: 1500px;
-    min-width: 300px;
-    min-height: 100%;
+    min-width: 100%;
+    height: 100%;
+    padding-bottom: 4px;
     background: #e5e5e5;
 }
 .midPage{
@@ -20,11 +20,11 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 500px;
-    min-height: 100%;
-    padding-bottom: 100px;
-    padding-left: 4px;
-    padding-right: 4px;
+    min-width: 80%;
+    height: 100%;
+    padding-bottom: 10em;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 .margim{
     border-top: 2px solid #fca311;
@@ -50,7 +50,7 @@ footer{
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 30px;
+    height: 2em;
 }
 /* Formartação para todas as tag a */
 a{
@@ -116,20 +116,20 @@ a{
 .box{
     display: flex;
     justify-content: center;
-    min-height: 300px;
-    max-height: 500px;
+    min-height: 70%;
+    max-height: 70%;
 }
 .conteudo{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
-    width: 350px;
-    height: 400px;
+    padding: 3%;
+    width: 22em;
+    height: 25em;
     border: #fca311 solid 1px;
 }
 .box img{
-    max-width: 320px;
+    max-width: 280px;
     max-height: 210px;
 }
 /* config para fazer o texto sumir */
@@ -190,7 +190,7 @@ input:hover, textarea:hover, #botao:hover{
     margin: 20px;
 }
 .meusContatos{
-    padding-top: 10px;
+    padding-top: 0.5em;
 }
 .meusContatos a{
     font-size: 15px;
