--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,6 @@
 body{
     /* Determinando o tamanho minimo e maximo de ajuste para os conteudos
     dentro do body */
-    min-width: 100%;
-    height: 100%;
-    padding-bottom: 4px;
     background: #e5e5e5;
 }
 .midPage{
@@ -20,11 +17,12 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 80%;
+    
     height: 100%;
-    padding-bottom: 10em;
-    padding-left: 2em;
-    padding-right: 2em;
+    padding-bottom: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 20vh;
 }
 .margim{
     border-top: 2px solid #fca311;
@@ -50,7 +48,7 @@ footer{
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 2em;
+    height: 20px;
 }
 /* Formartação para todas as tag a */
 a{
@@ -124,8 +122,8 @@ a{
     flex-direction: column;
     align-items: center;
     padding: 3%;
-    width: 22em;
-    height: 25em;
+    width: 350px;
+    height: 400px;
     border: #fca311 solid 1px;
 }
 .box img{
@@ -135,7 +133,7 @@ a{
 /* config para fazer o texto sumir */
 .conteudo p{
     display: none; /*Esconder o texto*/
-    margin-top: 2em;
+    margin-top: 20px;
 }
 .conteudo:hover{
     /* Criando efeito de transição na div
